--- a/index.html
+++ b/index.html
@@ -1,7 +1,244 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<html lang="en">
+<head>
+
+<meta charset="UTF-8">
+
+<title>Homene - Personal Website Template</title>
+
+<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+<meta name="description" content="Personal Website Template">
+<meta name="keywords" content="Personal, Website Template, Minimal HTML Template, Freelancer">
+<meta name="author" content="khai tawng">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/animate.css">
+<link rel="stylesheet" href="css/magnific-popup.css">
+<link rel="stylesheet" href="css/font-awesome.min.css">
+
+<!-- Main css -->
+<link rel="stylesheet" href="css/style.css">
+
+</head>
+<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
+
+<!-- PRE LOADER -->
+<div class="preloader">
+     <div class="spinner">
+          <span class="spinner-rotate"></span>
+     </div>
+</div>
+
+
+<!-- NAVIGATION SECTION -->
+<div class="navbar custom-navbar navbar-fixed-top" role="navigation">
+     <div class="container">
+
+          <div class="navbar-header">
+               <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon icon-bar"></span>
+                    <span class="icon icon-bar"></span>
+                    <span class="icon icon-bar"></span>
+               </button>
+               <!-- lOGO TEXT HERE -->
+               <a href="index.html" class="navbar-brand">Homene.</a>
+          </div>
+
+          <div class="collapse navbar-collapse">
+               <ul class="nav navbar-nav navbar-right">
+                    <li><a class="smoothScroll" href="#home">Home</a></li>
+                    <li><a class="smoothScroll" href="#about">About me</a></li>
+                    <li><a class="smoothScroll" href="#work">My Publication</a></li>
+                    <li><a class="smoothScroll" href="#contact">Contact</a></li>
+               </ul>
+          </div>
+
+     </div>
+</div>
+
+
+<!-- HOME SECTION -->
+<section id="home">
+
+     <div class="container">
+          <div class="row">
+
+               <div class="col-md-offset-1 col-md-2 col-sm-3">
+                    <img src="images/profile-image.jpg" alt="about image" width="82" class="wow fadeInUp img-responsive img-circle" data-wow-delay="0.2s">
+               </div>
+
+               <div class="col-md-8 col-sm-8">
+                    <h1 class="wow fadeInUp" data-wow-delay="0.6s">Hey there, my name is Keren Fu and I'm a research associate professor in Sichuan University, China.</h1>
+                    <a href="#" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">Download Resume</a>
+               </div>
+
+          </div>
+     </div>
+</section>
+
+<div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >网页模板</a></div>
+<!-- ABOUT SECTION -->
+<section id="about">
+     <div class="container">
+          <div class="row">
+
+               <div class="col-md-8 col-sm-12">
+                    <div class="about-thumb">
+                         <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
+                              <h2>A Little Bit Of My Story</h2>
+                              <p><strong>I received the B.S. degree from Huazhong University of Science and Technology, Wuhan, China, in 2011, and dual Ph.D. degrees from Shanghai Jiao Tong University, Shanghai, China, and Chalmers University of Technology, Gothenburg, Sweden, in 2016, under the joint supervision of Prof. Jie Yang and Prof. Irene Yu-Hua Gu. I am currently a research associated professor with College of Computer Science, Sichuan University, Chengdu, China. My current research interests include visual computing, saliency analysis, and machine learning.</strong></p></div><div class="wow fadeInUp" data-wow-delay="0.8s">
+                         </div>
+                         <ul class="social-icon">
+                              <li class="wow fadeInLeft" data-wow-delay="1s"><a href="#" class="fa fa-twitter"></a></li>
+                              <li class="wow fadeInUp" data-wow-delay="1.2s"><a href="#" class="fa fa-linkedin"></a></li>
+                              <li class="wow fadeInRight" data-wow-delay="1.4s"><a href="#" class="fa fa-dribbble"></a></li>
+                         </ul>
+                    </div>
+               </div>
+
+               <div class="col-md-4 col-sm-12">
+                    <div class="wow fadeInUp" data-wow-delay="0.4s">
+                         <h2>On Instagram</h2>
+                    </div>
+
+                    <div class="wow fadeInUp" data-wow-delay="0.6s">
+                         <a href="https://www.instagram.com/p/cqED9yjN0j/">
+                              <img src="images/instagram-image1.jpg" class="img-responsive" alt="instagram image">
+                         </a>
+
+                         <a href="https://www.instagram.com/p/enL0SsDN51/">
+                              <img src="images/instagram-image2.jpg" class="img-responsive" alt="instagram image">
+                         </a>
+
+                         <a href="https://www.instagram.com/p/apOuRTDNwJ/">
+                              <img src="images/instagram-image3.jpg" class="img-responsive" alt="instagram image">
+                         </a>
+
+                         <a href="https://www.instagram.com/p/ZXIj33jN2v/">
+                              <img src="images/instagram-image4.jpg" class="img-responsive" alt="instagram image">
+                         </a>
+
+                         <a href="https://www.instagram.com/p/Xwev1FjN9-/">
+                              <img src="images/instagram-image5.jpg" class="img-responsive" alt="instagram image">
+                         </a>
+                    </div>
+               </div>
+
+          </div>
+     </div>
+</section>
+
+
+<!-- SKILL SECTION -->
+<section id="skill">
+     <div class="container">
+          <div class="row"></div>
+     </div>
+</section>
+
+
+<!-- WORK SECTION -->
+<section id="work">
+     <div class="container">
+          <div class="row">
+
+               <div class="col-md-12 col-sm-12">
+                    <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+                         <h2>Publication</h2>
+                         <p>[1]<strong> Keren  Fu</strong>, Irene Yu-Hua Gu, &ldquo;Learning full-range affinity for diffusion-based  saliency detection,&rdquo; in IEEE International Conference on Acoustics, Speech and  Signal Processing (ICASSP), 2016.<br>
+[2] <strong>Keren  Fu</strong>, Irene Yu-Hua Gu, Anders Odblom, Feng Liu, &ldquo;Geodesic Distance  Transform-based Salient Region Segmentation for Automatic Traffic Sign  Recognition,&rdquo; in IEEE Intelligent Vehicles Symposium (IVS), 2016.<br>
+[3] <strong>Keren  Fu</strong>, Chen Gong, Irene Y.H. Gu, Jie Yang, Pengfei Shi, &ldquo;Salient Object Detection  using Normalized Cut and Geodesics,&rdquo; in IEEE Int'l Conference on Image  Processing (ICIP), 2015.<br>
+[4] <strong>Keren  Fu</strong>, Irene Y.H. Gu, Anders Odblom, &ldquo;Traffic Sign Recognition using Salient  Region Features: A Novel Learning-based Coarse-to-Fine Scheme,&rdquo; in IEEE  Intelligent Vehicles Symposium (IVS), 2015.<strong></strong><br>
+[5] <strong>Keren  Fu</strong>, Kai Xie, Chen Gong, Irene Y.H. Gu, Jie Yang, &ldquo;Effective Small Dim  Target Detection by Local Connectedness Constraint,&rdquo; in IEEE Int'l Conference  on Acoustics, Speech and Signal Processing (ICASSP), 2014.<br>
+[6] <strong>Keren  Fu</strong>, Chen Gong, Irene Y.H. Gu, Jie Yang, &ldquo;Spectral Salient Object  Detection,&rdquo; in Int'l Conference on Multimedia and Expo (ICME), 2014.<br>
+[7] <strong>Keren  Fu</strong>, Chen Gong, Yixiao Yun, Yijun Li, Irene Y.H. Gu, Jie Yang, Jingyi Yu,  &ldquo;Adaptive Multi-Level Region Merging for Salient Object Detection,&rdquo; in British  Machine Vision Conference (BMVC), 2014.<br>
+[8] <strong>Keren  Fu</strong>, Irene Y.H. Gu, Yixiao Yun, Chen Gong, Jie Yang, &ldquo;Graph construction for  salient object detection in videos,&rdquo; in Int'l Conference on Pattern Recognition  (ICPR), 2014.<br>
+[9] <strong>Keren  Fu</strong>, Irene Y.H. Gu, Anders Odblom, &ldquo;Automatic Traffic Sign Recognition based  on Saliency-Enhanced Features and SVMs from Incrementally Built Dataset,&rdquo; in  IEEE Int'l Conference on Connected Vehicle &amp; Expo (ICCVE), 2014.<br>
+[10] <strong>Keren  Fu</strong>, Chen Gong, Irene Y.H. Gu, Jie Yang, &ldquo;Geodesic Saliency Propagation for  Image Salient Region Detection,&rdquo; in IEEE Int'l Conference on Image Processing  (ICIP), 2013.<br>
+[11] <strong>Keren  Fu</strong>, Chen Gong, Jie Yang, Yue Zhou, &ldquo;Salient Object Detection via Color Contrast  and Color Distribution,&rdquo; in Asia Conference on Computer Vision (ACCV), 2012.<strong></strong><br>
+[12] <strong>Keren  Fu</strong>, Chen Gong, Yu Qiao, Jie Yang, Irene Y.H. Gu, &ldquo;One-class SVM assisted  accurate tracking,&rdquo; in IEEE Int'l Conference on Distributed Smart Cameras  (ICDSC), 2012.<br>
+[13] Yijun Li, <strong>Keren Fu</strong>, Lei Zhou, Yu Qiao, Jie Yang, &ldquo;Saliency Detection via  Foreground Rendering and Background Exclusion,&rdquo; in IEEE Int'l Conference on  Image Processing (ICIP), 2014.<br>
+[14] Yijun Li, <strong>Keren Fu</strong>, Lei Zhou, Yu Qiao, Jie Yang, Bai Li, &ldquo;Saliency Detection  based on Extended Boundary Prior with Foci of Attention,&rdquo; in IEEE Int'l  Conference on Acoustics, Speech and Signal Processing (ICASSP), 2014.<br>
+[15] Kai Xie, <strong>Keren Fu</strong>, Tao Zhou, Jie Yang, Qiang Wu, Xiangjian He, &ldquo;Small Target  Detection Using an Optimization-based Filter,&rdquo; in IEEE Int'l Conference on  Acoustics, Speech and Signal Processing (ICASSP), 2015.<br>
+[16] Chen Gong, Dacheng Tao, <strong>Keren Fu</strong>, Jie Yang, &ldquo;ReLISH: Reliable  Label Inference via Smoothness Hypothesis,&rdquo; in AAAI Conference on Artificial Intelligence  (AAAI), 2014.<br>
+[17] Chen Gong, Dacheng Tao, <strong>Keren Fu</strong>, Jie Yang, &ldquo;Signed Laplacian  Embedding for Supervised Dimension Reduction,&rdquo; in AAAI Conference on Artificial  Intelligence (AAAI), 2014.<br>
+[18] Tao Zhou, Xiangjian He, Kai Xie, <strong>Keren Fu</strong>, Junhao Zhang, Jie Yang,  &ldquo;Visual Tracking via Graph-based Efficient Manifold Ranking with  Low-Dimensional Compressive Features,&rdquo; in Int'l Conference on Multimedia and  Expo (ICME), 2014.<br>
+[19] Chen Gong, Dacheng Tao, Wei Liu, S.J.  Maybank, Meng Fang, <strong>Keren Fu</strong>, Jie  Yang, &ldquo;Saliency Propagation from Simple to Difficult,'' in IEEE International  Conference on Computer Vision and Pattern Recognition (CVPR), 2015. <br>
+发表国际SCI期刊论文列表                                                 <br>
+[1] <strong>Keren  Fu</strong>, Irene Yu-Hua Gu, Jie Yang, Spectral Salient Object Detection,  Neurocomputing, accepted.<br>
+[1] <strong>Keren  Fu</strong>, Irene Y.H. Gu, Chen Gong, Jie Yang, &ldquo;Robust manifold-preserving  diffusion-based saliency detection by adaptive weight construction,&rdquo;  Neurocomputing, 175: 336-347, 2016. (IF=2.39)<br>
+[2] <strong>Keren  Fu</strong>, Chen Gong, Irene Gu, Jie Yang, &ldquo;Normalized Cut-based Saliency Detection  by Adaptive Multi-Level Region Merging,&rdquo; IEEE Transactions on Image Processing  (TIP), 24(12):5671-5683, 2015. (IF=3.74)<br>
+[3] <strong>Keren  Fu</strong>, Irene Gu, Jie Yang, &ldquo;Saliency Detection by Fully Learning A Continuous  Conditional Random Field,&rdquo; IEEE Transactions on Multimedia (TMM), accepted, 2017.  (IF=2.54)<br>
+[4] <strong>Keren  Fu</strong>, Chen Gong, Jie Yang, Yue Zhou, Irene Yu-Hua Gu, &ldquo;Superpixel based color  contrast and color distribution driven salient object detection,&rdquo; Signal  processing: Image Communication, 28(10):1448-1463, 2013. (IF=1.60)<br>
+[5] <strong>Keren  Fu</strong>, Chen Gong, Yu Qiao, Jie Yang, Irene Yu-Hua Gu, &ldquo;One-class support  vector machine-assisted robust tracking,&rdquo; Journal of Electronic Imaging, 22(2),  2013. (IF= 0.62)<br>
+[6] Chenjie Ge, <strong>Keren Fu</strong>, Fanghui Liu, Li Bai, Jie Yang, &ldquo;Co-saliency detection via  inter and intra saliency propagation,&rdquo; Signal processing: Image Communication, 44:  69-83, 2016. (IF=1.60)<br>
+[7] Yijun Li, <strong>Keren Fu</strong>, Zhi Liu, Jie Yang, &ldquo;Efficient Saliency-Model-Guided  Visual Co-Saliency Detection,&rdquo; IEEE Signal Processing Letters, 28(5):588-592, 2015.  (IF=1.66)<br>
+[8] Chen Gong, <strong>Keren Fu</strong>, Qiang Wu, Enmei Tu, Jie Yang, &ldquo;Semi-supervised  classification with pairwise constraints,&rdquo; Neurocomputing, 139: 130-137, 2014.  (IF=2.47)<br>
+[9] Chen Gong, <strong>Keren Fu</strong>, Artur Loza, Qiang Wu, Jia Liu, Jie Yang, &ldquo;PageRank  Tracker: From ranking to tracking,&rdquo; IEEE Transactions on Cybernetics (TCYB),  44(6): 882-893, 2014. (IF=4.94)<br>
+[10] Kai Xie, <strong>Keren Fu</strong>, Tao Zhou, Junhao Zhang, Jie Yang, Qiang Wu, &quot;Small  target detection based on accumulated center-surround difference measure,&quot;  Infrared Physics &amp; Technology, 67: 229-236, 2014. (IF=1.588)<br>
+[11] Lei Zhou, <strong>Keren Fu</strong>, Yijun Li, Yu Qiao, Xianjian He, Jie Yang, &quot;Bayesian  Salient Object Detection Based on Saliency Driven Clustering,&quot; Signal  processing: Image Communication, 29(3): 434-447, 2014. (IF=1.60)<br>
+[12] Chen Gong, <strong>Keren Fu</strong>, Lei Zhou, Jie Yang, Xiangjian He, &ldquo;Scalable  semi-supervised classification via Neumann series,&rdquo; Neural Processing Letters,  42(1): 187-197, 2014. (IF=1.75)<br>
+[13] Chen Gong, <strong>Keren Fu</strong>, Enmei Tu, Jie Yang, Xiangjian He, &ldquo;Robust object tracking  using linear neighborhood propagation,&rdquo; Journal of Electronic Imaging, 2013.  (IF=0.62) <br>
+[14] Chen Gong, Dacheng Tao, <strong>Keren Fu</strong>, Jie Yang, &ldquo;FLAP: Fick's Law  Assisted Propagation for Semi-supervised Learning,&rdquo; IEEE Transactions on Neural  Networks and Learning Systems (TNNLS), 26(9): 2148-2162, 2015. (IF=4.85)<br>
+[15] Chen Gong, Tongliang Liu, Dacheng Tao, <strong>Keren Fu</strong>, Jie Yang, &ldquo;Deformed graph Laplacian  for semi-supervised learning,&rdquo; IEEE Transactions on Neural Networks and  Learning Systems (TNNLS), 26(10): 2261-2274, 2015. (IF=4.85)<br>
+[16] Tao Zhou, Xiangjian He, Kai Xie, <strong>Keren Fu</strong>, Junhao Zhang, Jie Yang, &ldquo;Robust  visual tracking via efficient manifold ranking with low-dimensional compressive  features,&rdquo; Pattern Recognition, 48(8): 2459-2473, 2015. (IF=3.40)  <br>
+[17] Fanghui Liu, Tao Zhou, Chen Gong, <strong>Keren Fu</strong>, Li Bai, Jie Yang, &ldquo;Inverse  Nonnegative Local Coordinate Factorization for Visual Tracking,&rdquo; IEEE  Transactions on Circuits and Systems for Video Technology, Accepted. (IF=2.25)  </p>
+[18] Fanghui Liu, Chen Gong, Tao Zhou, <strong>Keren Fu</strong> and Jie Yang.  Visual Tracking via Nonnegative Multiple  Coding. IEEE Transactions on Multimedia, Accepted. </div>
+               </div>
+          </div>
+     </div>
+</section>
+
+
+<!-- CONTACT SECTION -->
+<section id="contact">
+     <div class="container">
+          <div class="row">
+
+               <div class="col-md-12 col-sm-12">
+                    <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+                         <h2>You got projects?</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur venenatis tincidunt.</p>
+                    </div>
+               </div>
+
+               <div class="col-md-12 col-sm-12">
+                     <!-- CONTACT FORM HERE -->
+                    <div class="wow fadeInUp" data-wow-delay="0.6s">
+                        <form id="contact-form">
+                              <div class="col-md-4 col-sm-4">
+                                   <input type="text" class="form-control" name="name" placeholder="Name">
+                              </div>
+                              <div class="col-md-4 col-sm-4">
+                                   <input type="email" class="form-control" name="email" placeholder="Email">
+                              </div>
+                              <div class="col-md-4 col-sm-4">
+                                   <input type="text" class="form-control" name="name" placeholder="Subject">
+                              </div>
+                              <div class="col-md-12 col-sm-12">
+                                   <textarea class="form-control" rows="5" name="message" placeholder="Message"></textarea>
+                              </div>
+                              <div class="col-md-offset-9 col-md-3 col-sm-offset-3 col-sm-6">
+                                   <button id="submit" type="submit" class="form-control" name="submit">Send Message</button>
+                              </div>
+                        </form>
+                    </div>
+               </div>
+
+          </div>
+     </div>
+</section>
+
+
+<!-- SCRIPTS -->
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/smoothscroll.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/magnific-popup-options.js"></script>
+<script src="js/wow.min.js"></script>
+<script src="js/custom.js"></script>
+
 </body>
 </html>
