--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                <div class="col-md-12 col-sm-12">
                     <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                          <h2><strong>Publication</strong></h2>
-                         <h3>Conference papers</h3>
+                         <h3><strong>Conference papers</strong></h3>
                       <p>[1]<em><strong> Keren Fu</strong></em>, Irene Yu-Hua Gu, &ldquo;Learning full-range affinity for diffusion-based  saliency detection,&rdquo; in IEEE International Conference on Acoustics, Speech and  Signal Processing (ICASSP), 2016.</p>
                          <p><br>
                            [2] <strong>Keren  Fu</strong>, Irene Yu-Hua Gu, Anders Odblom, Feng Liu, &ldquo;Geodesic Distance  Transform-based Salient Region Segmentation for Automatic Traffic Sign  Recognition,&rdquo; in IEEE Intelligent Vehicles Symposium (IVS), 2016.</p>
@@ -196,7 +196,7 @@
                          <p><br>
                            [19] Chen Gong, Dacheng Tao, Wei Liu, S.J.  Maybank, Meng Fang, <strong>Keren Fu</strong>, Jie  Yang, &ldquo;Saliency Propagation from Simple to Difficult,'' in IEEE International  Conference on Computer Vision and Pattern Recognition (CVPR), 2015. </p>
                       <h3><br>
-                           Journal papers </h3>
+                           <strong>Journal papers </strong></h3>
                          <p>
                            [1] <strong>Keren  Fu</strong>, Irene Yu-Hua Gu, Jie Yang, Spectral Salient Object Detection,  Neurocomputing, accepted.</p>
                          <p><br>
