--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
-                    <li><a class="smoothScroll" href="#home"><font size="5" color="red">Home</font></a></li>
-                    <li><a class="smoothScroll" href="#about"><font size="5" color="red">About</font></a></li>
-                    <li><a class="smoothScroll" href="#work"><font size="5" color="red">Publication</font></a></li>
-                    <li><a class="smoothScroll" href="#contact"><font size="5" color="red">Contact</font></a></li>
+                    <li><a class="smoothScroll" href="#home"><font size="5" color="black">Home</font></a></li>
+                    <li><a class="smoothScroll" href="#about"><font size="5" color="black">About</font></a></li>
+                    <li><a class="smoothScroll" href="#work"><font size="5" color="black">Publication</font></a></li>
+                    <li><a class="smoothScroll" href="#contact"><font size="5" color="black">Contact</font></a></li>
             </ul>
           </div>
 
@@ -64,11 +64,11 @@
           <div class="row">
 
                <div class="col-md-offset-1 col-md-2 col-sm-3">
-                    <img src="images/profile-image.jpg" alt="about image" width="209" height="179" class="wow fadeInUp img-responsive img-circle" data-wow-delay="0.2s">
+                    <img src="images/profile-image.jpg" alt="about image" width="209" height="179" class="wow fadeInUp img-responsive img-circle" data-wow-delay="0.1s">
                </div>
 
                <div class="col-md-8 col-sm-3">
-                    <h3 class="wow fadeInUp" data-wow-delay="0.6s">Welcome! My name is Keren Fu (傅可人) and I'm a research associate professor in Sichuan University, China.</h3>
+                    <h3 class="wow fadeInUp" data-wow-delay="0.1s">Welcome! My name is Keren Fu (傅可人) and I'm a research associate professor in Sichuan University, China.</h3>
        
                </div>
           </div>
@@ -81,8 +81,9 @@
     <div class="row">
               <div class="col-md-8 col-sm-8">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News!</strong></h2>
-                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-10-8: One Neurocomputing paper accepted!</h4>
-                     <h4 data-wow-delay="0.1s">2017-8-14: NSFC fund on saliency is granted!</h4>
+                <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-10-8: One Neurocomputing paper accepted!</h4>
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-8-14: NSFC fund on saliency is granted!</h4>
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-3-21: One IEEE TMM paper accepted!</h4>
               </div>
     </div>
   </div>
@@ -256,7 +257,7 @@
 
                <div class="col-md-12 col-sm-12">
                      <!-- CONTACT FORM HERE -->
-                    <div class="wow fadeInUp" data-wow-delay="0.6s">
+                    <div class="wow fadeInUp" data-wow-delay="0.1s">
                         <form id="contact-form">
                               <div class="col-md-4 col-sm-4">
                                    <input type="text" class="form-control" name="name" placeholder="Name">
