--- a/index.html
+++ b/index.html
@@ -197,25 +197,32 @@
                    - <strong>Keren  Fu</strong>, Chen Gong, Yu Qiao, Jie Yang, Irene Yu-Hua Gu, &ldquo;One-class support  vector machine-assisted robust tracking,&rdquo; Journal of Electronic Imaging, 22(2),  2013. (IF= 0.754)<br>
                    <p>&nbsp;</p>
                          <h3><strong>Conference papers</strong></h3>
-                      <p>[1]<strong> Keren Fu</strong>, Irene Yu-Hua Gu, &ldquo;Learning full-range affinity for diffusion-based  saliency detection,&rdquo; in IEEE International Conference on Acoustics, Speech and  Signal Processing (ICASSP), 2016.<br>
-                      [2] <strong>Keren  Fu</strong>, Irene Yu-Hua Gu, Anders Odblom, Feng Liu, &ldquo;Geodesic Distance  Transform-based Salient Region Segmentation for Automatic Traffic Sign  Recognition,&rdquo; in IEEE Intelligent Vehicles Symposium (IVS), 2016.<br>
+                   <p>[1]<strong> Keren Fu</strong>, Irene Yu-Hua Gu, &ldquo;Learning full-range affinity for diffusion-based  saliency detection,&rdquo; in IEEE International Conference on Acoustics, Speech and  Signal Processing (ICASSP), 2016.<br>
+                   [2] <strong>Keren  Fu</strong>, Irene Yu-Hua Gu, Anders Odblom, Feng Liu, &ldquo;Geodesic Distance  Transform-based Salient Region Segmentation for Automatic Traffic Sign  Recognition,&rdquo; in IEEE Intelligent Vehicles Symposium (IVS), 2016.<br>
                    [3] <strong>Keren  Fu</strong>, Chen Gong, Irene Y.H. Gu, Jie Yang, Pengfei Shi, &ldquo;Salient Object Detection  using Normalized Cut and Geodesics,&rdquo; in IEEE Int'l Conference on Image  Processing (ICIP), 2015.<br>
-                   [4] <strong>Keren  Fu</strong>, Irene Y.H. Gu, Anders Odblom, &ldquo;Traffic Sign Recognition using Salient  Region Features: A Novel Learning-based Coarse-to-Fine Scheme,&rdquo; in IEEE  Intelligent Vehicles Symposium (IVS), 2015.<br>
-                   [5] <strong>Keren  Fu</strong>, Kai Xie, Chen Gong, Irene Y.H. Gu, Jie Yang, &ldquo;Effective Small Dim  Target Detection by Local Connectedness Constraint,&rdquo; in IEEE Int'l Conference  on Acoustics, Speech and Signal Processing (ICASSP), 2014.<br>
-                   [6] <strong>Keren  Fu</strong>, Chen Gong, Irene Y.H. Gu, Jie Yang, &ldquo;Spectral Salient Object  Detection,&rdquo; in Int'l Conference on Multimedia and Expo (ICME), 2014.<br>
-                   [7] <strong>Keren  Fu</strong>, Chen Gong, Yixiao Yun, Yijun Li, Irene Y.H. Gu, Jie Yang, Jingyi Yu,  &ldquo;Adaptive Multi-Level Region Merging for Salient Object Detection,&rdquo; in British  Machine Vision Conference (BMVC), 2014.<br>
-                   [8] <strong>Keren  Fu</strong>, Irene Y.H. Gu, Yixiao Yun, Chen Gong, Jie Yang, &ldquo;Graph construction for  salient object detection in videos,&rdquo; in Int'l Conference on Pattern Recognition  (ICPR), 2014.<br>
-                   [9] <strong>Keren  Fu</strong>, Irene Y.H. Gu, Anders Odblom, &ldquo;Automatic Traffic Sign Recognition based  on Saliency-Enhanced Features and SVMs from Incrementally Built Dataset,&rdquo; in  IEEE Int'l Conference on Connected Vehicle &amp; Expo (ICCVE), 2014.<br>
-                   [10] <strong>Keren  Fu</strong>, Chen Gong, Irene Y.H. Gu, Jie Yang, &ldquo;Geodesic Saliency Propagation for  Image Salient Region Detection,&rdquo; in IEEE Int'l Conference on Image Processing  (ICIP), 2013.<br>
-                   [11] <strong>Keren  Fu</strong>, Chen Gong, Jie Yang, Yue Zhou, &ldquo;Salient Object Detection via Color Contrast  and Color Distribution,&rdquo; in Asia Conference on Computer Vision (ACCV), 2012.<br>
-                   [12] <strong>Keren  Fu</strong>, Chen Gong, Yu Qiao, Jie Yang, Irene Y.H. Gu, &ldquo;One-class SVM assisted  accurate tracking,&rdquo; in IEEE Int'l Conference on Distributed Smart Cameras  (ICDSC), 2012.<br>
-                   [13] Yijun Li, <strong>Keren Fu</strong>, Lei Zhou, Yu Qiao, Jie Yang, &ldquo;Saliency Detection via  Foreground Rendering and Background Exclusion,&rdquo; in IEEE Int'l Conference on  Image Processing (ICIP), 2014.<br>
-                   [14] Yijun Li, <strong>Keren Fu</strong>, Lei Zhou, Yu Qiao, Jie Yang, Bai Li, &ldquo;Saliency Detection  based on Extended Boundary Prior with Foci of Attention,&rdquo; in IEEE Int'l  Conference on Acoustics, Speech and Signal Processing (ICASSP), 2014.<br>
-                   [15] Kai Xie, <strong>Keren Fu</strong>, Tao Zhou, Jie Yang, Qiang Wu, Xiangjian He, &ldquo;Small Target  Detection Using an Optimization-based Filter,&rdquo; in IEEE Int'l Conference on  Acoustics, Speech and Signal Processing (ICASSP), 2015.<br>
-                   [16] Chen Gong, Dacheng Tao, <strong>Keren Fu</strong>, Jie Yang, &ldquo;ReLISH: Reliable  Label Inference via Smoothness Hypothesis,&rdquo; in AAAI Conference on Artificial Intelligence  (AAAI), 2014.<br>
-                   [17] Chen Gong, Dacheng Tao, <strong>Keren Fu</strong>, Jie Yang, &ldquo;Signed Laplacian  Embedding for Supervised Dimension Reduction,&rdquo; in AAAI Conference on Artificial  Intelligence (AAAI), 2014.<br>
-                   [18] Tao Zhou, Xiangjian He, Kai Xie, <strong>Keren Fu</strong>, Junhao Zhang, Jie Yang,  &ldquo;Visual Tracking via Graph-based Efficient Manifold Ranking with  Low-Dimensional Compressive Features,&rdquo; in Int'l Conference on Multimedia and  Expo (ICME), 2014.<br>
-                   [19] Chen Gong, Dacheng Tao, Wei Liu, S.J.  Maybank, Meng Fang, <strong>Keren Fu</strong>, Jie  Yang, &ldquo;Saliency Propagation from Simple to Difficult,'' in IEEE International  Conference on Computer Vision and Pattern Recognition (CVPR), 2015.</p></div>
+                   [4] <strong>Keren  Fu</strong>, Irene Y.H. Gu, Anders Odblom, &ldquo;Traffic Sign Recognition using Salient  Region Features: A Novel Learning-based Coarse-to-Fine Scheme,&rdquo; in IEEE  Intelligent Vehicles Symposium (IVS), 2015.</p>
+                      <p>[5] Chen Gong, Dacheng Tao, Wei Liu, S.J.  Maybank, Meng Fang, <strong>Keren Fu</strong>, Jie  Yang, &ldquo;Saliency Propagation from Simple to Difficult,'' in IEEE International  Conference on Computer Vision and Pattern Recognition (CVPR), 2015.</p>
+                   <p>[6] Kai Xie, <strong>Keren Fu</strong>, Tao Zhou, Jie Yang, Qiang Wu, Xiangjian He, &ldquo;Small Target  Detection Using an Optimization-based Filter,&rdquo; in IEEE Int'l Conference on  Acoustics, Speech and Signal Processing (ICASSP), 2015.<br>
+                   [7] <strong>Keren  Fu</strong>, Kai Xie, Chen Gong, Irene Y.H. Gu, Jie Yang, &ldquo;Effective Small Dim  Target Detection by Local Connectedness Constraint,&rdquo; in IEEE Int'l Conference  on Acoustics, Speech and Signal Processing (ICASSP), 2014.<br>
+                   [8] <strong>Keren  Fu</strong>, Chen Gong, Irene Y.H. Gu, Jie Yang, &ldquo;Spectral Salient Object  Detection,&rdquo; in Int'l Conference on Multimedia and Expo (ICME), 2014.<br>
+                   [9] <strong>Keren  Fu</strong>, Chen Gong, Yixiao Yun, Yijun Li, Irene Y.H. Gu, Jie Yang, Jingyi Yu,  &ldquo;Adaptive Multi-Level Region Merging for Salient Object Detection,&rdquo; in British  Machine Vision Conference (BMVC), 2014.<br>
+                   [10] <strong>Keren  Fu</strong>, Irene Y.H. Gu, Yixiao Yun, Chen Gong, Jie Yang, &ldquo;Graph construction for  salient object detection in videos,&rdquo; in Int'l Conference on Pattern Recognition  (ICPR), 2014.<br>
+                   [11] <strong>Keren  Fu</strong>, Irene Y.H. Gu, Anders Odblom, &ldquo;Automatic Traffic Sign Recognition based  on Saliency-Enhanced Features and SVMs from Incrementally Built Dataset,&rdquo; in  IEEE Int'l Conference on Connected Vehicle &amp; Expo (ICCVE), 2014.</p>
+                   <p>[12] Yijun Li, <strong>Keren Fu</strong>, Lei Zhou, Yu Qiao, Jie Yang, &ldquo;Saliency Detection via  Foreground Rendering and Background Exclusion,&rdquo; in IEEE Int'l Conference on  Image Processing (ICIP), 2014.</p>
+                   <p>[13] Yijun Li, <strong>Keren Fu</strong>, Lei Zhou, Yu Qiao, Jie Yang, Bai Li, &ldquo;Saliency Detection  based on Extended Boundary Prior with Foci of Attention,&rdquo; in IEEE Int'l  Conference on Acoustics, Speech and Signal Processing (ICASSP), 2014.</p>
+                      <p>[14] Chen Gong, Dacheng Tao, <strong>Keren Fu</strong>, Jie Yang, &ldquo;ReLISH: Reliable  Label Inference via Smoothness Hypothesis,&rdquo; in AAAI Conference on Artificial Intelligence  (AAAI), 2014.<br>
+[15] Chen Gong, Dacheng Tao, <strong>Keren Fu</strong>, Jie Yang, &ldquo;Signed Laplacian  Embedding for Supervised Dimension Reduction,&rdquo; in AAAI Conference on Artificial  Intelligence (AAAI), 2014.<br>
+[16] Tao Zhou, Xiangjian He, Kai Xie, <strong>Keren Fu</strong>, Junhao Zhang, Jie Yang,  &ldquo;Visual Tracking via Graph-based Efficient Manifold Ranking with  Low-Dimensional Compressive Features,&rdquo; in Int'l Conference on Multimedia and  Expo (ICME), 2014.<br>
+                   [17] <strong>Keren  Fu</strong>, Chen Gong, Irene Y.H. Gu, Jie Yang, &ldquo;Geodesic Saliency Propagation for  Image Salient Region Detection,&rdquo; in IEEE Int'l Conference on Image Processing  (ICIP), 2013.<br>
+                   [18] <strong>Keren  Fu</strong>, Chen Gong, Jie Yang, Yue Zhou, &ldquo;Salient Object Detection via Color Contrast  and Color Distribution,&rdquo; in Asia Conference on Computer Vision (ACCV), 2012.<br>
+                   [19] <strong>Keren  Fu</strong>, Chen Gong, Yu Qiao, Jie Yang, Irene Y.H. Gu, &ldquo;One-class SVM assisted  accurate tracking,&rdquo; in IEEE Int'l Conference on Distributed Smart Cameras  (ICDSC), 2012.</p>
+                   <p><br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                   </p>
+                 </div>
                </div>
           </div>
      </div>
