--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                <div class="col-md-offset-1 col-md-2 col-sm-3">
                     <p><img src="images/profile-image.jpg" alt="about image" width="209" height="179" class="wow fadeInUp img-responsive img-circle" data-wow-delay="0.1s"></p>
          <ul class="social-icon">
-         <li class="wow fadeInLeft" data-wow-delay="0.3s"><a href="https://scholar.google.com/citations?hl=zh-CN&user=aga7vDkAAAAJ" class="fa fa-dribbble"></a></li>  </ul>
+         <li class="wow fadeInLeft" data-wow-delay="0.3s"><a href="https://scholar.google.com/citations?hl=zh-CN&user=aga7vDkAAAAJ" class="fa fa-google"></a></li>  </ul>
          <a href="https://scholar.google.com/citations?hl=zh-CN&user=aga7vDkAAAAJ" class="wow fadeInUp" data-wow-delay="0.1s"><font size="4" color="blue">Google scholar</font></a>
                </div>
 
