--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                    <h2><strong>Publication</strong></h2>
                          <h3><strong>Journal papers </strong></h3>
                          <h3><font color="blue"><strong>[2017]</strong></font></h3>
-                         <p><strong>- Keren  Fu</strong>, Irene Yu-Hua Gu, Jie Yang, Spectral Salient Object Detection,  Neurocomputing, accepted, 2017. (IF=3.32)                   </p>
+                         <p><strong>- Keren  Fu</strong>, Irene Yu-Hua Gu, Jie Yang, Spectral Salient Object Detection,  Neurocomputing, accepted, 2017. (IF=3.32)<a href="sources/NEUCOM_2017(final).pdf" download>[<font color="blue">pdf</font>]</a><a href="sources/Neuro_demo.zip" download>[<font color="blue">code</font>]</a>                   </p>
                    <p>- Fanghui Liu, Tao Zhou, Chen Gong, <strong>Keren Fu</strong>, Li Bai, Jie Yang, &ldquo;Inverse  Nonnegative Local Coordinate Factorization for Visual Tracking,&rdquo; IEEE  Transactions on Circuits and Systems for Video Technology, Accepted, 2017. (IF=3.59)  </p>
                    <p>- Fanghui Liu, Chen Gong, Tao Zhou, <strong>Keren Fu</strong> and Jie Yang.  Visual Tracking via Nonnegative Multiple  Coding. IEEE Transactions on Multimedia, Accepted, 2017. (IF=3.51)  </p>
                    <p>- <strong>Keren  Fu</strong>, Irene Gu, Jie Yang, &ldquo;Saliency Detection by Fully Learning A Continuous  Conditional Random Field,&rdquo; IEEE Transactions on Multimedia (TMM), accepted, 2017.  (IF=3.51)</p>
@@ -228,6 +228,30 @@
      </div>
 </section>
 
+<!-- SERVICES SECTION -->
+<section id="services">
+  <div class="container"> 
+    <div class="row">
+              <div class="col-md-8 col-sm-8">
+              <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Academic services</strong></h2>
+              <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Reviewer for:</strong></h3>
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transaction on Neural Networks and Learning Systems                     </h4>
+                     <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition</h4>
+                     <h4  class="wow fadeInUp" data-wow-delay="0.1s">Neurocomputing</h4>
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">Computer Vision and Image Understanding</h4>
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">Image and Vision Computing</h4>
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">Signal Processing: Image Communication</h4>
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">IET Image Processing</h4>
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">Journal of Ambient Intelligence and Smart Environment</h4>
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">Digital Signal Processing</h4>
+                     
+              <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>TPC members:</strong></h3>
+                    
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">CCBR 2017, ISBA 2018                     </h4>
+              </div>
+    </div>
+  </div>
+</section>
 
 <!-- CONTACT SECTION -->
 <section id="contact">
