--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
      <div class="container">
           <div class="row">
 
-               <div class="col-md-offset-1 col-md-2 col-sm-3">
-                    <p><img src="images/profile-image.jpg" alt="about image" width="209" height="179" class="wow fadeInUp img-responsive img-circle" data-wow-delay="0.1s"></p>
+               <div class="col-md-offset-1 col-md-2 col-sm-6">
+                    <img src="images/profile-image.jpg" alt="about image" width="209" height="179" class="wow fadeInUp img-responsive img-circle" data-wow-delay="0.1s">
          <ul class="social-icon">
          <li class="wow fadeInLeft" data-wow-delay="0.3s"><a href="https://scholar.google.com/citations?hl=zh-CN&user=aga7vDkAAAAJ" class="fa fa-google"></a></li>  </ul>
          <a href="https://scholar.google.com/citations?hl=zh-CN&user=aga7vDkAAAAJ" class="wow fadeInUp" data-wow-delay="0.1s"><font size="4" color="blue">Google scholar</font></a>
                </div>
 
-               <div class="col-md-8 col-sm-3">
+               <div class="col-md-8 col-sm-6">
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">Welcome! </h3>
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- My name is Keren Fu (傅可人) and I'm a research associate professor (副研究员) with the College of Computer Science, Sichuan Univerisity, Chengdu, China. </h3>
                     <h3 class="wow fadeInUp" data-wow-delay="0.1s">- I got my dual Ph.D. degrees from both <a href="http://www.scu.edu.cn/">Shanghai Jiao Tong University and Chalmers University of Technology</a> in 2016, and joined Sichuan University in 2017. </h3>
