--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <li><a class="smoothScroll" href="#home"><font size="4" color="black">Home</font></a></li>
                     <li><a class="smoothScroll" href="#about"><font size="4" color="black">About</font></a></li>
                     <li><a class="smoothScroll" href="#work"><font size="4" color="black">Publication</font></a></li>
+                     <li><a class="smoothScroll" href="#projects"><font size="4" color="black">Projects</font></a></li>
                     <li><a class="smoothScroll" href="#contact"><font size="4" color="black">Contact</font></a></li>
             </ul>
           </div>
@@ -86,6 +87,7 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11"  style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-10: I start working on a project  aiming at 3D face cameras. Please see &quot;Projects&quot; item for more info.</h4>
                 <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-9-9: One Neurocomputing paper accepted!</h4>
                      <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-8-14: NSFC fund on video saliency detecion granted!                     </h4>
                      <h4  class="wow fadeInUp" data-wow-delay="0.1s">2017-5: One IEEE TCSVT accepted!</h4>
@@ -104,27 +106,9 @@
             <div class="col-md-8 col-sm-12">
               <div class="about-thumb">
                 <div class="wow fadeInUp section-title" data-wow-delay="0.1s">
-                  <div class="col-md-40 col-sm-50">
-                    <div class="about-thumb">
-                      <div class="wow fadeInUp section-title" data-wow-delay="0.1s">
-                        <div class="col-md-50 col-sm-50">
-                          <div class="about-thumb">
-                            <div class="wow fadeInUp section-title" data-wow-delay="0.1s">
-                              <div class="col-md-50 col-sm-50">
-                                <div class="about-thumb">
-                                  <div class="wow fadeInUp section-title" data-wow-delay="0.1s">
+                 
                                     <h2><strong>About me</strong></h2>
-                                    <p><font size="4" color="black">I received the B.S. degree from Huazhong University of Science and Technology, Wuhan, China, in 2011, and dual Ph.D. degrees from Shanghai Jiao Tong University, Shanghai, China, and Chalmers University of Technology, Gothenburg, Sweden, in 2016, under the joint supervision of Prof. <a href="http://www.pami.sjtu.edu.cn/"><u>Jie Yang</u></a> and Prof. <a href="http://www.chalmers.se/en/staff/Pages/Irene-Yu-Hua-Gu.aspx"><u>Irene Yu-Hua Gu</u></a>. I am currently a research associated professor with College of Computer Science, Sichuan University, Chengdu, China. My current research interests include visual computing, saliency analysis, and machine learning.</font></p>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <h2><strong></strong></h2>
-                      </div>
-                    </div>
-                  </div>
+                                    <p><font size="4" color="black">I received the B.S. degree from Huazhong University of Science and Technology, Wuhan, China, in 2011, and dual Ph.D. degrees from Shanghai Jiao Tong University, Shanghai, China, and Chalmers University of Technology, Gothenburg, Sweden, in 2016, under the joint supervision of Prof. <a href="http://www.pami.sjtu.edu.cn/"><u>Jie Yang</u></a> and Prof. <a href="http://www.chalmers.se/en/staff/Pages/Irene-Yu-Hua-Gu.aspx"><u>Irene Yu-Hua Gu</u></a>. I am currently a research associated professor with College of Computer Science, Sichuan University, Chengdu, China. My current research interests include visual computing, saliency analysis, and machine learning.</font></p>  
                 </div>
               </div>
             </div>
@@ -218,10 +202,30 @@
 </section>
 
 <!-- SERVICES SECTION -->
+<section id="projects">
+  <div class="container"> 
+       <div class="row">
+              <div class="col-md-8 col-sm-8">
+              <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+              <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Projects</strong></h2>
+               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Current projects:</strong></h3>
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">-I am working on a project aiming at products of portable 3D face cameras that could reconstruct 3D face in practical scenes, with applications to, such as 3D face rendering and recognition.</h4>
+                     <img src="images/3d-face.png" alt="3dface" width="500" height="403" class="wow fadeInUp img-responsive center-block" data-wow-delay="0.1s">       
+                    </div>               
+             </div>
+       </div>
+  </div>
+</section>
+
+
+
+
+<!-- SERVICES SECTION -->
 <section id="services">
   <div class="container"> 
     <div class="row">
-              <div class="col-md-8 col-sm-8">
+       <div class="col-md-8 col-sm-8">
+          <div class="wow fadeInUp section-title" data-wow-delay="0.2s">    
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Academic services</strong></h2>
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Reviewer for:</strong></h3>
                      <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transaction on Neural Networks and Learning Systems                     </h4>
@@ -237,8 +241,9 @@
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>TPC members:</strong></h3>
                     
                      <h4 class="wow fadeInUp" data-wow-delay="0.1s">CCBR 2017, ISBA 2018                     </h4>
-              </div>
-    </div>
+               </div>
+          </div>
+      </div>
   </div>
 </section>
 
@@ -248,15 +253,10 @@
           <div class="row">
             <div class="col-md-12 col-sm-12">
               <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-                <div class="col-md-12 col-sm-12">
-                  <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                     <h2><strong>Contact me</strong></h2>
                     <p>Email: fkrsuper [at] gmail [dot] com or fkrsuper [at] scu [dot] edu [dot] cn</p>
                     <p>Address: College of Computer Science, Sichuan University, Wangjiang Campus, 610065.</p>
                     <p>地址: 四川省成都市一环路南一段24号四川大学, 610065</p>
-                  </div>
-                </div>
-                <h2><strong></strong></h2>
               </div>
             </div>
           </div>
