--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Projects</strong></h2>
                <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Current projects:</strong></h3>
-                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">-I am working on a project aiming at products of portable 3D face cameras that could reconstruct 3D face in practical scenes, with applications to, such as 3D face rendering and recognition.</h4>
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">-I am working on a project aiming at products of portable 3D face cameras that could reconstruct 3D face in practical scenes, with applications to 3D face rendering and recognition, etc.</h4>
                      <img src="images/3d-face.png" alt="3dface" width="500" height="403" class="wow fadeInUp img-responsive center-block" data-wow-delay="0.1s">       
                     </div>               
              </div>
