--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <li><a class="smoothScroll" href="#about"><font size="4" color="black">About</font></a></li>
                     <li><a class="smoothScroll" href="#work"><font size="4" color="black">Publication</font></a></li>
                      <li><a class="smoothScroll" href="#projects"><font size="4" color="black">Projects</font></a></li>
+                     <li><a class="smoothScroll" href="#courses"><font size="4" color="black">Courses</font></a></li>
                     <li><a class="smoothScroll" href="#contact"><font size="4" color="black">Contact</font></a></li>
             </ul>
           </div>
@@ -223,7 +224,19 @@
   </div>
 </section>
 
-
+<!-- COURSE SECTION -->
+<section id="courses">
+  <div class="container"> 
+       <div class="row">
+              <div class="col-md-11 col-sm-11"   >
+              <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+              <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Courses</strong></h2>
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">- SSD2: Introduction to Computer Systems<a href="sources/SSD2.zip" download>[<font color="blue">course resources</font>]</a></h4>     
+                    </div>               
+             </div>
+       </div>
+  </div>
+</section>
 
 
 <!-- SERVICES SECTION -->
