--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
               <div class="col-md-11 col-sm-11"   >
               <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Courses</strong></h2>
-                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">- SSD2: Introduction to Computer Systems<a href="sources/SSD2.zip" download>[<font color="blue">course resources</font>]</a></h4>     
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">- SSD2: Introduction to Computer Systems<a href="sources/ssd2_textbook.chm" download>[<font color="blue">text book</font>]</a><a href="sources/New Perspectives on Computer Concepts 2011.pdf" download>[<font color="blue">extended book</font>]</a></h4>     
                     </div>               
              </div>
        </div>
@@ -243,26 +243,28 @@
 <section id="services">
   <div class="container"> 
     <div class="row">
-       <div class="col-md-8 col-sm-8"   >
-          <div class="wow fadeInUp section-title" data-wow-delay="0.2s">    
+      <div class="col-md-8 col-sm-8"   >
+        <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+          <div class="col-md-8 col-sm-8"   >
+            <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Academic services</strong></h2>
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Reviewer for:</strong></h3>
-                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transaction on Neural Networks and Learning Systems                     </h4>
-                     <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition</h4>
-                     <h4  class="wow fadeInUp" data-wow-delay="0.1s">Neurocomputing</h4>
-                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">Computer Vision and Image Understanding</h4>
-                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">Image and Vision Computing</h4>
-                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">Signal Processing: Image Communication</h4>
-                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">IET Image Processing</h4>
-                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">Journal of Ambient Intelligence and Smart Environment</h4>
-                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">Digital Signal Processing</h4>
-                     
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transaction on Neural Networks and Learning Systems </h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">Neurocomputing</h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">Computer Vision and Image Understanding</h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">Image and Vision Computing</h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">Signal Processing: Image Communication</h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">IET Image Processing</h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">Journal of Ambient Intelligence and Smart Environment</h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">Digital Signal Processing</h4>
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>TPC members:</strong></h3>
-                    
-                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">CCBR 2017, ISBA 2018                     </h4>
-               </div>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">CCBR 2017, ISBA 2018 </h4>
+            </div>
           </div>
+        </div>
       </div>
+    </div>
   </div>
 </section>
 
