--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li><a class="smoothScroll" href="#about"><font size="4" color="black">About</font></a></li>
                     <li><a class="smoothScroll" href="#work"><font size="4" color="black">Publication</font></a></li>
                      <li><a class="smoothScroll" href="#projects"><font size="4" color="black">Projects</font></a></li>
-                     <li><a class="smoothScroll" href="#courses"><font size="4" color="black">Courses</font></a></li>
+                     <li><a class="smoothScroll" href="#courses"><font size="4" color="black">Teaching</font></a></li>
                     <li><a class="smoothScroll" href="#contact"><font size="4" color="black">Contact</font></a></li>
             </ul>
           </div>
@@ -230,7 +230,7 @@
        <div class="row">
        <div class="col-md-11 col-sm-11"   >
         <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-          <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Courses</strong></h2>
+          <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Teaching</strong></h2>
           <h4 class="wow fadeInUp" data-wow-delay="0.1s">- SSD2: Introduction to Computer Systems<a href="sources/ssd2_textbook.zip" download>[<font color="blue">text-book</font>]</a><a href="sources/New Perspectives on Computer Concepts 2011.zip" download>[<font color="blue">extended-reading</font>]</a><a href="sources/Unit1_PPT.zip" download>[<font color="blue">Unit1</font>]</a><a href="sources/Unit2-1.zip" download>[<font color="blue">Unit2-1</font>]</a><a href="sources/Unit2-2.zip" download>[<font color="blue">Unit2-2</font>]</a><a href="sources/Unit2-3.zip" download>[<font color="blue">Unit2-3</font>]</a></h4>
         </div>
       </div>
@@ -245,8 +245,6 @@
     <div class="row">
       <div class="col-md-8 col-sm-8"   >
         <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-          <div class="col-md-8 col-sm-8"   >
-            <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Academic services</strong></h2>
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Reviewer for:</strong></h3>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transaction on Neural Networks and Learning Systems </h4>
@@ -260,8 +258,6 @@
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Digital Signal Processing</h4>
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>TPC members:</strong></h3>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">CCBR 2017, ISBA 2018 </h4>
-            </div>
-          </div>
         </div>
       </div>
     </div>
