--- a/index.html
+++ b/index.html
@@ -227,14 +227,7 @@
 <!-- COURSE SECTION -->
 <section id="courses">
   <div class="container"> 
-       <div class="row">
-       <div class="col-md-11 col-sm-11"   >
-        <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-          <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Teaching</strong></h2>
-          <h4 class="wow fadeInUp" data-wow-delay="0.1s">- SSD2: Introduction to Computer Systems<a href="sources/ssd2_textbook.zip" download>[<font color="blue">text-book</font>]</a><a href="sources/New Perspectives on Computer Concepts 2011.zip" download>[<font color="blue">extended-reading</font>]</a><a href="sources/Unit1_PPT.zip" download>[<font color="blue">Unit1</font>]</a><a href="sources/Unit2-1.zip" download>[<font color="blue">Unit2-1</font>]</a><a href="sources/Unit2-2.zip" download>[<font color="blue">Unit2-2</font>]</a><a href="sources/Unit2-3.zip" download>[<font color="blue">Unit2-3</font>]</a></h4>
-        </div>
-      </div>
-       </div>
+       <div class="row"></div>
   </div>
 </section>
 
@@ -243,6 +236,12 @@
 <section id="services">
   <div class="container"> 
     <div class="row">
+      <div class="col-md-11 col-sm-11"   >
+        <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+          <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Teaching</strong></h2>
+          <h4 class="wow fadeInUp" data-wow-delay="0.1s">- SSD2: Introduction to Computer Systems<a href="sources/ssd2_textbook.zip" download>[<font color="blue">text-book</font>]</a><a href="sources/New Perspectives on Computer Concepts 2011.zip" download>[<font color="blue">extended-reading</font>]</a><a href="sources/Unit1_PPT.zip" download>[<font color="blue">Unit1</font>]</a><a href="sources/Unit2-1.zip" download>[<font color="blue">Unit2-1</font>]</a><a href="sources/Unit2-2.zip" download>[<font color="blue">Unit2-2</font>]</a><a href="sources/Unit2-3.zip" download>[<font color="blue">Unit2-3</font>]</a><a href="sources/Unit3-1.zip" download>[<font color="blue">Unit3-1</font>]</a></h4>
+        </div>
+      </div>
       <div class="col-md-8 col-sm-8"   >
         <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Academic services</strong></h2>
