--- a/index.html
+++ b/index.html
@@ -248,6 +248,8 @@
               <h3 class="wow fadeInUp" data-wow-delay="0.1s"><strong>Reviewer for:</strong></h3>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transaction on Neural Networks and Learning Systems </h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition Letters</h4>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">IEEE Access</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">Neurocomputing</h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Computer Vision and Image Understanding</h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">Image and Vision Computing</h4>
