--- a/index.html
+++ b/index.html
@@ -238,9 +238,8 @@
 </section>
 
 <!-- COURSE SECTION -->
-<section id="courses">
+<!--<section id="courses">
   <div class="container"> 
-       <div class="row"></div>
   </div>
 </section>
 
