--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
   </div>
 </section>
 <!-- SERVICES SECTION -->
-<section id="services">
+<section id="courses">
   <div class="container"> 
     <div class="row"><span class="wow fadeInUp section-title"></span>
       <div class="col-md-11 col-sm-11"   >
