--- a/index.html
+++ b/index.html
@@ -87,15 +87,16 @@
     <div class="row" >
               <div class="col-md-11 col-sm-11" style="border:3px solid #5CACEE;">
               <h2 class="wow fadeInUp" data-wow-delay="0.1s"><strong>News:</strong></h2>
+              <h4  class="wow fadeInUp" data-wow-delay="0.1s">2019-5: One ICIP paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2019-2: One Image and Vision Computing paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2019-1: One Neurocomputing paper accepted!</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">2018-6: One IEEE TMM accepted!</h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-10: I start working on a project  aiming at 3D face cameras. Please see &quot;Projects&quot; item for more info.</h4>
-                <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-9-9: One Neurocomputing paper accepted!</h4>
-                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-8-14: NSFC fund on video saliency detecion granted!                     </h4>
+                <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-9: One Neurocomputing paper accepted!</h4>
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-8: NSFC fund on video saliency detecion granted!                     </h4>
                      <h4  class="wow fadeInUp" data-wow-delay="0.1s">2017-5: One IEEE TCSVT accepted!</h4>
                      <h4  class="wow fadeInUp" data-wow-delay="0.1s">2017-4: One IEEE TMM accepted!</h4>
-                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-3-3: One IEEE TMM paper accepted!</h4>
+                     <h4 class="wow fadeInUp" data-wow-delay="0.1s">2017-3: One IEEE TMM paper accepted!</h4>
               </div>
     </div>
   </div>
@@ -190,26 +191,27 @@
     <p>- Chen Gong, <strong>Keren Fu</strong>, Enmei Tu, Jie Yang, Xiangjian He, &ldquo;Robust object tracking  using linear neighborhood propagation,&rdquo; Journal of Electronic Imaging, 2013.  (IF=0.754) )<a href="sources/NP_JEI_2013.pdf" download>[<font color="blue">pdf</font>]</a> <br>
       - <strong>Keren  Fu</strong>, Chen Gong, Yu Qiao, Jie Yang, Irene Yu-Hua Gu, &ldquo;One-class support  vector machine-assisted robust tracking,&rdquo; Journal of Electronic Imaging, 22(2),  2013. (IF= 0.754)<a href="sources/OCSVM_JEI_2013.pdf" download>[<font color="blue">pdf</font>]</a><br>
     <h3><strong>Conference papers</strong></h3>
-    <p>[1]<strong> Keren Fu</strong>, Irene Yu-Hua Gu, &ldquo;Learning full-range affinity for diffusion-based  saliency detection,&rdquo; in IEEE International Conference on Acoustics, Speech and  Signal Processing (ICASSP), 2016.<br>
-      [2] <strong>Keren  Fu</strong>, Irene Yu-Hua Gu, Anders Odblom, Feng Liu, &ldquo;Geodesic Distance  Transform-based Salient Region Segmentation for Automatic Traffic Sign  Recognition,&rdquo; in IEEE Intelligent Vehicles Symposium (IVS), 2016.<br>
+    <p>- Zhicong Feng, <strong> Keren Fu*</strong>, Qijun Zhao, &ldquo;Learning to Focus and Discriminate for Fine-grained Classification,&rdquo; in IEEE Int'l Conference on Image  Processing (ICIP), 2019.<br>
+       - <strong> Keren Fu</strong>, Irene Yu-Hua Gu, &ldquo;Learning full-range affinity for diffusion-based  saliency detection,&rdquo; in IEEE International Conference on Acoustics, Speech and  Signal Processing (ICASSP), 2016.<br>
+      - <strong>Keren  Fu</strong>, Irene Yu-Hua Gu, Anders Odblom, Feng Liu, &ldquo;Geodesic Distance  Transform-based Salient Region Segmentation for Automatic Traffic Sign  Recognition,&rdquo; in IEEE Intelligent Vehicles Symposium (IVS), 2016.<br>
 
-      [3] <strong>Keren  Fu</strong>, Chen Gong, Irene Y.H. Gu, Jie Yang, Pengfei Shi, &ldquo;Salient Object Detection  using Normalized Cut and Geodesics,&rdquo; in IEEE Int'l Conference on Image  Processing (ICIP), 2015.<br>
-      [4] <strong>Keren  Fu</strong>, Irene Y.H. Gu, Anders Odblom, &ldquo;Traffic Sign Recognition using Salient  Region Features: A Novel Learning-based Coarse-to-Fine Scheme,&rdquo; in IEEE  Intelligent Vehicles Symposium (IVS), 2015.<br>
-      [5] Chen Gong, Dacheng Tao, Wei Liu, S.J.  Maybank, Meng Fang, <strong>Keren Fu</strong>, Jie  Yang, &ldquo;Saliency Propagation from Simple to Difficult,'' in IEEE International  Conference on Computer Vision and Pattern Recognition (CVPR), 2015.<a href="http://www.escience.cn/people/chengong/Codes.html">[<font color="red">link to pdf and code</font>]</a><br>
-     [6] Kai Xie, <strong>Keren Fu</strong>, Tao Zhou, Jie Yang, Qiang Wu, Xiangjian He, &ldquo;Small Target  Detection Using an Optimization-based Filter,&rdquo; in IEEE Int'l Conference on  Acoustics, Speech and Signal Processing (ICASSP), 2015.<br>
-      [7] <strong>Keren  Fu</strong>, Kai Xie, Chen Gong, Irene Y.H. Gu, Jie Yang, &ldquo;Effective Small Dim  Target Detection by Local Connectedness Constraint,&rdquo; in IEEE Int'l Conference  on Acoustics, Speech and Signal Processing (ICASSP), 2014.<br>
-      [8] <strong>Keren  Fu</strong>, Chen Gong, Irene Y.H. Gu, Jie Yang, &ldquo;Spectral Salient Object  Detection,&rdquo; in Int'l Conference on Multimedia and Expo (ICME), 2014.<br>
-      [9] <strong>Keren  Fu</strong>, Chen Gong, Yixiao Yun, Yijun Li, Irene Y.H. Gu, Jie Yang, Jingyi Yu,  &ldquo;Adaptive Multi-Level Region Merging for Salient Object Detection,&rdquo; in British  Machine Vision Conference (BMVC), 2014.<br>
-      [10] <strong>Keren  Fu</strong>, Irene Y.H. Gu, Yixiao Yun, Chen Gong, Jie Yang, &ldquo;Graph construction for  salient object detection in videos,&rdquo; in Int'l Conference on Pattern Recognition  (ICPR), 2014.<br>
-      [11] <strong>Keren  Fu</strong>, Irene Y.H. Gu, Anders Odblom, &ldquo;Automatic Traffic Sign Recognition based  on Saliency-Enhanced Features and SVMs from Incrementally Built Dataset,&rdquo; in  IEEE Int'l Conference on Connected Vehicle &amp; Expo (ICCVE), 2014.<br>
-     [12] Yijun Li, <strong>Keren Fu</strong>, Lei Zhou, Yu Qiao, Jie Yang, &ldquo;Saliency Detection via  Foreground Rendering and Background Exclusion,&rdquo; in IEEE Int'l Conference on  Image Processing (ICIP), 2014.<br>
-    [13] Yijun Li, <strong>Keren Fu</strong>, Lei Zhou, Yu Qiao, Jie Yang, Bai Li, &ldquo;Saliency Detection  based on Extended Boundary Prior with Foci of Attention,&rdquo; in IEEE Int'l  Conference on Acoustics, Speech and Signal Processing (ICASSP), 2014.<br>
-    [14] Chen Gong, Dacheng Tao, <strong>Keren Fu</strong>, Jie Yang, &ldquo;ReLISH: Reliable  Label Inference via Smoothness Hypothesis,&rdquo; in AAAI Conference on Artificial Intelligence  (AAAI), 2014.<br>
-      [15] Chen Gong, Dacheng Tao, <strong>Keren Fu</strong>, Jie Yang, &ldquo;Signed Laplacian  Embedding for Supervised Dimension Reduction,&rdquo; in AAAI Conference on Artificial  Intelligence (AAAI), 2014.<br>
-      [16] Tao Zhou, Xiangjian He, Kai Xie, <strong>Keren Fu</strong>, Junhao Zhang, Jie Yang,  &ldquo;Visual Tracking via Graph-based Efficient Manifold Ranking with  Low-Dimensional Compressive Features,&rdquo; in Int'l Conference on Multimedia and  Expo (ICME), 2014.<br>
-      [17] <strong>Keren  Fu</strong>, Chen Gong, Irene Y.H. Gu, Jie Yang, &ldquo;Geodesic Saliency Propagation for  Image Salient Region Detection,&rdquo; in IEEE Int'l Conference on Image Processing  (ICIP), 2013.<a href="sources/GeodesicSaliency2013ICIP.pdf" download>[<font color="blue">pdf</font>]</a><a href="sources/ICIP_Release.zip" download>[<font color="blue">code</font>]</a><br>
-      [18] <strong>Keren  Fu</strong>, Chen Gong, Jie Yang, Yue Zhou, &ldquo;Salient Object Detection via Color Contrast  and Color Distribution,&rdquo; in Asia Conference on Computer Vision (ACCV), 2012.<br>
-      [19] <strong>Keren  Fu</strong>, Chen Gong, Yu Qiao, Jie Yang, Irene Y.H. Gu, &ldquo;One-class SVM assisted  accurate tracking,&rdquo; in IEEE Int'l Conference on Distributed Smart Cameras  (ICDSC), 2012.</p>
+      - <strong>Keren  Fu</strong>, Chen Gong, Irene Y.H. Gu, Jie Yang, Pengfei Shi, &ldquo;Salient Object Detection  using Normalized Cut and Geodesics,&rdquo; in IEEE Int'l Conference on Image  Processing (ICIP), 2015.<br>
+      - <strong>Keren  Fu</strong>, Irene Y.H. Gu, Anders Odblom, &ldquo;Traffic Sign Recognition using Salient  Region Features: A Novel Learning-based Coarse-to-Fine Scheme,&rdquo; in IEEE  Intelligent Vehicles Symposium (IVS), 2015.<br>
+      - Chen Gong, Dacheng Tao, Wei Liu, S.J.  Maybank, Meng Fang, <strong>Keren Fu</strong>, Jie  Yang, &ldquo;Saliency Propagation from Simple to Difficult,'' in IEEE International  Conference on Computer Vision and Pattern Recognition (CVPR), 2015.<a href="http://www.escience.cn/people/chengong/Codes.html">[<font color="red">link to pdf and code</font>]</a><br>
+     - Kai Xie, <strong>Keren Fu</strong>, Tao Zhou, Jie Yang, Qiang Wu, Xiangjian He, &ldquo;Small Target  Detection Using an Optimization-based Filter,&rdquo; in IEEE Int'l Conference on  Acoustics, Speech and Signal Processing (ICASSP), 2015.<br>
+      - <strong>Keren  Fu</strong>, Kai Xie, Chen Gong, Irene Y.H. Gu, Jie Yang, &ldquo;Effective Small Dim  Target Detection by Local Connectedness Constraint,&rdquo; in IEEE Int'l Conference  on Acoustics, Speech and Signal Processing (ICASSP), 2014.<br>
+      - <strong>Keren  Fu</strong>, Chen Gong, Irene Y.H. Gu, Jie Yang, &ldquo;Spectral Salient Object  Detection,&rdquo; in Int'l Conference on Multimedia and Expo (ICME), 2014.<br>
+      - <strong>Keren  Fu</strong>, Chen Gong, Yixiao Yun, Yijun Li, Irene Y.H. Gu, Jie Yang, Jingyi Yu,  &ldquo;Adaptive Multi-Level Region Merging for Salient Object Detection,&rdquo; in British  Machine Vision Conference (BMVC), 2014.<br>
+      - <strong>Keren  Fu</strong>, Irene Y.H. Gu, Yixiao Yun, Chen Gong, Jie Yang, &ldquo;Graph construction for  salient object detection in videos,&rdquo; in Int'l Conference on Pattern Recognition  (ICPR), 2014.<br>
+      - <strong>Keren  Fu</strong>, Irene Y.H. Gu, Anders Odblom, &ldquo;Automatic Traffic Sign Recognition based  on Saliency-Enhanced Features and SVMs from Incrementally Built Dataset,&rdquo; in  IEEE Int'l Conference on Connected Vehicle &amp; Expo (ICCVE), 2014.<br>
+     - Yijun Li, <strong>Keren Fu</strong>, Lei Zhou, Yu Qiao, Jie Yang, &ldquo;Saliency Detection via  Foreground Rendering and Background Exclusion,&rdquo; in IEEE Int'l Conference on  Image Processing (ICIP), 2014.<br>
+    - Yijun Li, <strong>Keren Fu</strong>, Lei Zhou, Yu Qiao, Jie Yang, Bai Li, &ldquo;Saliency Detection  based on Extended Boundary Prior with Foci of Attention,&rdquo; in IEEE Int'l  Conference on Acoustics, Speech and Signal Processing (ICASSP), 2014.<br>
+    - Chen Gong, Dacheng Tao, <strong>Keren Fu</strong>, Jie Yang, &ldquo;ReLISH: Reliable  Label Inference via Smoothness Hypothesis,&rdquo; in AAAI Conference on Artificial Intelligence  (AAAI), 2014.<br>
+    - Chen Gong, Dacheng Tao, <strong>Keren Fu</strong>, Jie Yang, &ldquo;Signed Laplacian  Embedding for Supervised Dimension Reduction,&rdquo; in AAAI Conference on Artificial  Intelligence (AAAI), 2014.<br>
+      - Tao Zhou, Xiangjian He, Kai Xie, <strong>Keren Fu</strong>, Junhao Zhang, Jie Yang,  &ldquo;Visual Tracking via Graph-based Efficient Manifold Ranking with  Low-Dimensional Compressive Features,&rdquo; in Int'l Conference on Multimedia and  Expo (ICME), 2014.<br>
+      - <strong>Keren  Fu</strong>, Chen Gong, Irene Y.H. Gu, Jie Yang, &ldquo;Geodesic Saliency Propagation for  Image Salient Region Detection,&rdquo; in IEEE Int'l Conference on Image Processing  (ICIP), 2013.<a href="sources/GeodesicSaliency2013ICIP.pdf" download>[<font color="blue">pdf</font>]</a><a href="sources/ICIP_Release.zip" download>[<font color="blue">code</font>]</a><br>
+      - <strong>Keren  Fu</strong>, Chen Gong, Jie Yang, Yue Zhou, &ldquo;Salient Object Detection via Color Contrast  and Color Distribution,&rdquo; in Asia Conference on Computer Vision (ACCV), 2012.<br>
+      - <strong>Keren  Fu</strong>, Chen Gong, Yu Qiao, Jie Yang, Irene Y.H. Gu, &ldquo;One-class SVM assisted  accurate tracking,&rdquo; in IEEE Int'l Conference on Distributed Smart Cameras  (ICDSC), 2012.</p>
 				</div>
 			</div>
 		</div>
