--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Multimedia </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Automation Science and Engineering </h4>
               <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Industrial Informatics </h4>
+              <h4 class="wow fadeInUp" data-wow-delay="0.1s">IEEE Transactions on Industrial Electronics </h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">Pattern Recognition Letters</h4>
               <h4  class="wow fadeInUp" data-wow-delay="0.1s">IEEE Access</h4>
