--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             <div class="col-md-12 col-sm-12"  >
               <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                     <h2><strong>Contact me</strong></h2>
-                    <p>Email: fkrsuper [at] gmail [dot] com or fkrsuper [at] scu [dot] edu [dot] cn</p>
+                    <p>Email: fkrsuper [at] scu [dot] edu [dot] cn <!--fkrsuper [at] gmail [dot] com--></p>
                     <p>Address: College of Computer Science, Sichuan University, Wangjiang Campus, 610065.</p>
                     <p>地址: 四川省成都市一环路南一段24号四川大学, 610065</p>
               </div>
