--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
   				<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
     <h2><strong>Publication</strong></h2>
     <h3><strong>Journal papers </strong></h3>
-     <p>- Zhenguo Hu, Penghui Gui, Ziqing Feng, Qijun Zhao, <strong>Keren Fu*</strong>, Feng <br>
-       Liu, Zhengxi Liu. Boosting Depth-based Face Recognition from a Quality Perspective, Sensors, Accepted. (IF=3.031)</p>
+     <p>- Zhenguo Hu, Penghui Gui, Ziqing Feng, Qijun Zhao, <strong>Keren Fu*</strong>, Feng Liu, Zhengxi Liu. Boosting Depth-based Face Recognition from a Quality Perspective, Sensors, Accepted. (IF=3.031)</p>
      <p>- <strong>Keren Fu</strong>, Qijun Zhao, Irene Yu-Hua Gu, Jie Yang, Deepside: A General Deep Framework for Salient Object Detection, Neurocomputing, 356: 69-82, 2019. (IF=3.32)</p>
      <p>- <strong>Keren Fu</strong>, Yijiang Xie, Hailong Jing, Jiangping Zhu, Fast Spatial-temporal Stereo Matching for 3D Face Reconstruction under Speckle Pattern Projection, Image and Vision Computing, 85: 36-45, 2019. (IF=2.16)</p>        
      <p>- Lei Zhou, <strong>Keren Fu</strong>, Zhi Liu, Fan Zhang, Zhimin Yin, Xiangyong Kong, Jianli Zheng, Superpixel based Continuous Conditional Random Field Neural Network for Semantic Segmentation, Neurocomputing, 340: 196-210, 2019. (IF=3.32)</p>
